--- a/modules/openapi-generator/src/test/resources/3_0/issue4808.yaml
+++ b/modules/openapi-generator/src/test/resources/3_0/issue4808.yaml
@@ -17,30 +17,15 @@ paths:
         schema:
           $ref: '#/components/schemas/SomeQuery'
       responses:
-        '200':
-          description: Some return value
-          content:
-            application/json:
-              schema:
-                $ref: '#/components/schemas/SomeReturnValue'
-              example:
-                someValue: value
+        '204':
+          description: Success
 components:
   schemas:
-    SomeReturnValue:
-      type: object
-      required:
-        - someValue
-      properties:
-        someValue:
-          type: string
     SomeQuery:
       type: object
       required:
         - someValue
       properties:
-        someValue:
-          type: string
         testOutcomes:
           type: array
           items:
